// File: app_settings.proto
// Author: loserkidz
// Created: 2025-05-23 09:28:15
// Description: Proto file untuk settings aplikasi RoxGPS

syntax = "proto3";

option java_package = "com.roxgps.datastore";
option java_multiple_files = true;

// =====================================================================
// Pesan AppSettings
// Mendefinisikan struktur data untuk SEMUA pengaturan aplikasi.
// Field numbers harus unik dan tidak boleh diubah setelah rilis
// untuk mempertahankan kompatibilitas data.
// =====================================================================

message AppSettings {
  // === Status Faking & Lokasi Utama ===
  bool is_faking_started = 1;      // Status faking aktif/tidak aktif
  float current_latitude = 2;      // Latitude lokasi faking utama
  float current_longitude = 3;     // Longitude lokasi faking utama

  // === Status Hook ===
  bool is_system_hooked = 4;       // Status apakah sistem berhasil di-hook

  // === Pengaturan Faking Lanjutan ===
  bool is_random_position_enabled = 5;      // Status random position aktif/tidak
  float accuracy_level_setting = 6;         // Tingkat akurasi
  int32 random_position_range_meters = 7;   // Range untuk random position
  int64 update_interval_ms = 8;            // Interval update di hook
  float simulated_speed_mps = 9;           // Kecepatan simulasi dalam m/s
  float simulated_bearing_degrees = 10;     // Bearing/Arah Hadap dalam derajat
  double simulated_altitude_meters = 11;    // Ketinggian dalam meter
  string simulated_provider_name = 12;      // Nama provider lokasi

  // === Pengaturan UI/Tampilan ===
  int32 map_type = 13;                     // Tipe peta
  int32 dark_theme_mode = 14;              // Status dark theme
  bool is_joystick_control_enabled = 15;   // Status joystick diaktifkan

  // === Pengaturan Update ===
  bool is_update_check_disabled = 16;       // Status cek update dinonaktifkan

  // === Token & Security ===
  string hooked_app_token = 17;            // Token dari aplikasi yang di-hook (e.g., "bearer xyz...")
  int64 token_last_updated = 18;           // Timestamp terakhir update token
  string hooked_package_name = 19;         // Package name aplikasi yang di-hook
  bool is_token_valid = 20;                // Status validitas token

  // === Default Values (comments only) ===
  // ... (previous default values) ...
  // hooked_app_token: ""
  // token_last_updated: 0
  // hooked_package_name: ""
  // is_token_valid: false

  // === Version History ===
  // v1.1.0 (2025-05-23 09:28:15) - Added token management
  // - Added hooked_app_token
  // - Added token_last_updated
  // - Added hooked_package_name
  // - Added is_token_valid
  // v1.0.0 (2025-05-23) - Initial version
  // - Basic location faking settings
  // - UI preferences
  // - Update configuration
}

// ... (previous enum definitions) ...